--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -86,6 +86,7 @@ code: |
     set_progress(15)
     agrees_to_disclosures
     users[0].screening_user
+    users[0].aliases.gather()
     users[0].current_rep
     users[0].notice_to_appear
     users[0].hearing
@@ -103,7 +104,8 @@ code: |
     users[0].other_family_status
     users[0].pending_immigration
     users[0].parents_status
-    users[0].military
+    if users[0].age_in_years() >= 14:
+      users[0].military
     users[0].criminal_3a_yes
     check_criminal_history
     users[0].criminal.gather()
@@ -113,7 +115,7 @@ code: |
     set_progress(75)
     users[0].uvisa_5a_yes
     users[0].tvisa_6a_yes
-    if users[0].birthdate.age_in_years() < 21 and not users[0].married and not users[0].has_children:
+    if users[0].age_in_years() < 21 and not users[0].married and not users[0].has_children:
       users[0].sijs_lived_home
     users[0].nacara_parents
     if users[0].lpr_signpost:
