--- a/docassemble/USCISApplications/data/questions/screener_questions.yml
+++ b/docassemble/USCISApplications/data/questions/screener_questions.yml
@@ -539,16 +539,28 @@ fields:
     datatype: area
     rows: 2
     label above field: True
+    show if: 
+      variable: users[0].children[i].sijs_parents
+      is: False
   - How often does ${ users[0].children[i].name.first } talk to their absent parent?: users[0].children[i].sijs_parents_talk
     datatype: area
     rows: 2
     label above field: True
+    show if: 
+      variable: users[0].children[i].sijs_parents
+      is: False
   - Does the absent parent provide financial support for the child?: users[0].children[i].sijs_parents_financial
     datatype: yesnoradio
     label above field: True
+    show if: 
+      variable: users[0].children[i].sijs_parents
+      is: False
   - "Did the absent parent ever hit or use physical violence against ${ users[0].children[i].name.first }?": users[0].children[i].sijs_parents_violence
     datatype: yesnoradio
     label above field: True
+    show if: 
+      variable: users[0].children[i].sijs_parents
+      is: False
   - Details: users[0].children[i].sijs_parents_violence_details
     datatype: area
     rows: 2
@@ -557,6 +569,9 @@ fields:
   - "Did the absent parent ever scream or use harsh words against ${ users[0].children[i].name.first }?": users[0].children[i].sijs_parents_language
     datatype: yesnoradio
     label above field: True
+    show if: 
+      variable: users[0].children[i].sijs_parents
+      is: False
   - Details: users[0].children[i].sijs_parents_language_details
     datatype: area
     rows: 2
@@ -576,7 +591,7 @@ fields:
 ---
 code: |
   users[0].children[i].name.first
-  if not users[0].children[i].married and users[0].children[i].age_in_years() < 21 and (users[0].children[i].country_of_birth != "United States" or users[0].children[i].immigration_status != 'USC'):
+  if not users[0].children[i].married and users[0].children[i].age_in_years() < 21 and not (users[0].children[i].country_of_birth == "United States" or users[0].children[i].immigration_status == 'USC'):
     users[0].children[i].sijs_lived_home
   users[0].children[i].complete = True
 ---
@@ -938,7 +953,7 @@ id: SIJS eligibility
 question: |
   SIJS eligibility for ${ users[0].name.full() }
 fields: 
-  - Prior to coming to the U.S, who did you live with in your home country?: users[0].sijs_lived_home
+  - Prior to coming to the U.S, who did you live with both in your home country?: users[0].sijs_lived_home
     datatype: area
     rows: 2
     label above field: True
@@ -963,13 +978,28 @@ fields:
     datatype: area
     rows: 2
     label above field: True
-  - How often do you talk to your parent(s)?: users[0].sijs_parents_talk
+    show if: 
+      variable: users[0].sijs_parents
+      is: False
+  - How often do you talk to your absent parent?: users[0].sijs_parents_talk
     datatype: area
     rows: 2
     label above field: True
+    show if: 
+      variable: users[0].sijs_parents
+      is: False
+  - Does your absent parent provide financial support?: users[0].sijs_parents_financial
+    datatype: yesnoradio
+    label above field: True
+    show if: 
+      variable: users[0].sijs_parents
+      is: False
   - "If both your parents are present in your life, is there any physical violence between your parents or did either of your parents hit you or any of your siblings?": users[0].sijs_parents_violence
     datatype: yesnoradio
     label above field: True
+    show if: 
+      variable: users[0].sijs_parents
+      is: False
   - Details: users[0].sijs_parents_violence_details
     datatype: area
     rows: 2
@@ -978,6 +1008,9 @@ fields:
   - "If both your parents are present in your life, did both or either of your parents scream or use harsh words against you or your siblings?": users[0].sijs_parents_language
     datatype: yesnoradio
     label above field: True
+    show if: 
+      variable: users[0].sijs_parents
+      is: False
   - Details: users[0].sijs_parents_language_details
     datatype: area
     rows: 2
@@ -997,7 +1030,6 @@ fields:
   - Are any of your parents or your spouse a US citizen or Legal Permanent Resident (LPR)?: users[0].nacara_parent_spouse
     datatype: yesnoradio
     label above field: True
-    show if: users[0].nacara_parents
   - Did this parent or spouse become a lawful permanent resident via NACARA?: users[0].nacara_lpr
     datatype: yesnoradio
     label above field: True
